kubernetes/lab1/web-auth-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"web-auth-server-svc","namespace":"web-auth"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"auth-server"}}}
  creationTimestamp: "2023-12-03T00:13:48Z"
  name: web-auth-server-svc
  namespace: web-auth
  resourceVersion: "519"
  uid: d39f08a5-c5c5-4c9d-80d3-b1dbc3952c99
spec:
  clusterIP: 10.97.55.217
  clusterIPs:
  - 10.97.55.217
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: auth-server
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
